<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Main Settings">

        <CheckBoxPreference
            android:key="@string/setting_1_key"
            android:title="@string/setting_1_title"
            android:summary="@string/setting_1_summary"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="@string/setting_2_key"
            android:title="@string/setting_2_title"
            android:summary="@string/setting_2_summary"
            android:defaultValue="false"
            android:dependency="@string/setting_1_key"/>

        <ListPreference
            android:key="@string/setting_3_key"
            android:title="@string/setting_3_title"
            android:summary="@string/setting_3_summary"
            android:defaultValue="8000"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"/>

        <ListPreference
            android:key="@string/setting_4_key"
            android:title="@string/setting_4_title"
            android:summary="@string/setting_4_summary"
            android:defaultValue="8000"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"/>

        <ListPreference
            android:key="@string/setting_5_key"
            android:title="@string/setting_5_title"
            android:summary="@string/setting_5_summary"
            android:defaultValue="12000"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"/>

        <ListPreference
            android:key="@string/setting_6_key"
            android:title="@string/setting_6_title"
            android:summary="@string/setting_6_summary"
            android:defaultValue="15000"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"/>

    </PreferenceCategory>

</PreferenceScreen>